# ai-finance-platform

./: .env.example  .gitignore  init_db.py  pyproject.toml  requirements.txt  supabase_schema.sql  vercel.json
alembic/: env.py
alembic/versions/: 217768881df2_add_account_number_and_notes_to_accounts.py  4b19e42e9bad_add_credit_limit_to_cards.py  562707bbf1f6_sync_remaining_models_to_schema.py  85f840879fcc_add_holdings_table.py
api/: index.py
backend/: .gitignore  finance.db  pyproject.toml  vercel.json
backend/app/: main.py
backend/srv/: main.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
scripts/: migrate_company.py  migrate_hr.py  migrate_patrimonio.py  seed_my_portfolio.py
srv/: main.py
srv/api/: deps_auth.py
srv/core/: config.py
srv/database/: auto_migrations.py
srv/models/: __init__.py  account.py  budget.py  card.py  employee.py  employee_document.py  employee_leave.py  entity.py  holding.py  property.py  reminder.py  settings.py  smart_money_trade.py  strategy.py  subscription.py  transaction.py  vehicle.py
srv/routers/: account.py  ai.py  budget.py  card.py  category.py  demo.py  employee.py  employee_document.py  employee_leave.py  entity.py  holding.py  liability.py  markets.py  news.py  notifications.py  property.py  reminder.py  smart_money.py  strategy.py  strategy_cron.py  subscription.py  transaction.py  vehicle.py
srv/schemas/: account.py  budget.py  card.py  employee.py  employee_document.py  employee_leave.py  entity.py  holding.py  property.py  reminder.py  strategy.py  subscription.py  (+2 more)
(+68 files in other folders)
