[project]
name = "finance-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "starlette==0.47.2",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "sqlalchemy==2.0.43",
    "psycopg2-binary==2.9.10",
    "passlib==1.7.4",
    "bcrypt==4.0.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "email-validator==2.3.0",
    "google-generativeai>=0.8.5",
    "anthropic>=0.108.0",
    "httpx==0.27.2",
    "openpyxl==3.1.5",
    "pypdf==5.1.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
[tool.ruff.lint]
ignore = ["F401", "F403"]
select = ["E", "F", "I"]
